--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,11 @@
 .payment-form {
   width: 350px;
+  display: flex;
+  flex-direction: column;
+
+  div, button {
+    margin: 10px 0;
+  }
 }
 
 .transactions-list {
