--- a/src/styles/AddressBook.scss
+++ b/src/styles/AddressBook.scss
@@ -6,9 +6,7 @@
   &.active {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     height: 200px;
     overflow: scroll;
   }
