--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,7 @@
 @import "components/Menu";
 @import "components/RoundContainer";
 @import "components/Transaction";
+@import "components/AddressBook";
 
 @import "App.scss";
 @import "TransactionList";
-@import "AddressBook";
