add split button

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "components/RoundContainer";
 @import "components/Transaction";
 @import "components/AddressBook";
+@import "components/ContactsButton";
 
 @import "App.scss";
 @import "TransactionList";
