--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -73,3 +73,9 @@ html, body {
   margin-left: auto;
   margin-right: auto;
 }
+.right {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: flex-end;
+}
