--- a/src/styles/components/RoundContainer.scss
+++ b/src/styles/components/RoundContainer.scss
@@ -1,7 +1,8 @@
 .round-container {
   background-color: transparent;
-  -webkit-box-shadow: 0px 0px 4px 1px rgba(255,255,255,1);
-  -moz-box-shadow: 0px 0px 4px 1px rgba(255,255,255,1);
-  box-shadow: 0px 0px 4px 1px rgba(255,255,255,1);
-  border-radius: 16px;
+  -webkit-box-shadow: 0px 0px 4px 1px rgba(255,255,255,1) !important;
+  -moz-box-shadow: 0px 0px 4px 1px rgba(255,255,255,1) !important;
+  box-shadow: 0px 0px 4px 1px rgba(255,255,255,1) !important;
+  border-radius: 16px !important;
+  border-width: 1px;
 }
